# fyp

./: .gitignore  pyproject.toml  run_eda.sh
configs/: config.yaml
configs/model/: setfit.yaml
configs/training/: fewshot.yaml
notebooks/: 00_comprehensive_eda.ipynb
outputs/results/: setfit_fewshot_results.csv
scripts/: preprocess_data.py  process.py  train_setfit.py
src/: __init__.py
src/utils/: __init__.py  logger.py  seed.py
